k8s/03-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avatars-api
  namespace: avatars
  labels:
    app: avatars-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avatars-api
  template:
    metadata:
      labels:
        app: avatars-api
    spec:
      containers:
        - name: api
          image: ghcr.io/mati2173/cf-avatars-generator-api:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: data-volume
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: api-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: avatars-api
  namespace: avatars
spec:
  selector:
    app: avatars-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
