k8s/04-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avatars-web
  namespace: avatars
  labels:
    app: avatars-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avatars-web
  template:
    metadata:
      labels:
        app: avatars-web
    spec:
      containers:
        - name: web
          image: ghcr.io/mati2173/cf-avatars-generator-web:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: avatars-web
  namespace: avatars
spec:
  selector:
    app: avatars-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
# Alias DNS para el proxy de Nginx
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: avatars
spec:
  type: ExternalName
  externalName: avatars-api.avatars.svc.cluster.local
  ports:
    - port: 5000
