k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avatars-ingress
  namespace: avatars
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: avatars.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avatars-web
            port:
              number: 8080
